0.8.0/_sources/gallery/get_current_viewer.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/get_current_viewer.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_get_current_viewer.py:


Get current viewer
==================

Get a reference to the current napari viewer.

Whilst this example is contrived, it can be useful to get a reference to the
viewer when the viewer is out of scope.

.. tags:: gui

.. GENERATED FROM PYTHON SOURCE LINES 12-35



.. image-sg:: /gallery/images/sphx_glr_get_current_viewer_001.png
   :alt: get current viewer
   :srcset: /gallery/images/sphx_glr_get_current_viewer_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python

    import numpy as np

    import napari

    # create viewer
    viewer = napari.Viewer()

    # lose reference to viewer
    viewer = 'oops no viewer here'

    # get that reference again
    viewer = napari.current_viewer()

    # work with the viewer
    x = np.arange(256)
    y = np.arange(256).reshape((256, 1))
    # from: https://botsin.space/@bitartbot/113553754823363986
    image = (-(~((y - x) ^ (y + x)))) % 11
    layer = viewer.add_image(image)
    layer.contrast_limits = (8.5, 10)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_get_current_viewer.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: get_current_viewer.ipynb <get_current_viewer.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: get_current_viewer.py <get_current_viewer.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: get_current_viewer.zip <get_current_viewer.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
